[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/bullet.png" type="Texture" id=1]
[ext_resource path="res://player/playerbullet.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Laser_Shoot38.wav" type="AudioStream" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CircleShape2D" id=2]

[node name="PlayerBullet" type="Area2D" groups=[
"Bullet",
]]
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true
[connection signal="area_entered" from="." to="." method="_on_PlayerBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
